# Ed25519-React-Native-Module

./: .gitignore  README.md  ed25519-react.podspec  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/ed25519react/: Ed25519ReactModule.java  Ed25519ReactPackage.java
cpp/: ed25519-react.cpp  ed25519-react.h
ios/: Ed25519React.h  Ed25519React.mm
ios/Ed25519React.xcodeproj/: project.pbxproj
src/: index.tsx
