cmake_minimum_required(VERSION 3.4.1)

set (CMAKE_VERBOSE_MAKEFILE ON)
set (CMAKE_CXX_STANDARD 11)

add_library(Ed25519React
            SHARED
            ../cpp/ed25519-react.cpp
            cpp-adapter.cpp
            ../Ed25519-WASM-Wrapper-master/crypto_hash_sha512.c
            ../Ed25519-WASM-Wrapper-master/crypto_verify_32.c
            ../Ed25519-WASM-Wrapper-master/randombytes.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_0.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_1.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_add.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_cmov.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_copy.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_frombytes.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_invert.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_isnegative.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_isnonzero.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_mul.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_neg.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_pow22523.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_sq.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_sq2.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_sub.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/fe_tobytes.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_add.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_double_scalarmult.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_frombytes.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_madd.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_msub.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p1p1_to_p2.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p1p1_to_p3.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p2_0.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p2_dbl.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p3_0.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p3_dbl.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p3_tobytes.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p3_to_cached.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_p3_to_p2.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_precomp_0.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_scalarmult_base.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_sub.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/ge_tobytes.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/keypair.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/open.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/sc_muladd.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/sc_reduce.c
            ../supercop-20220213/crypto_sign/ed25519/ref10/sign.c
)

include_directories(
            ../cpp
            ../Ed25519-WASM-Wrapper-master
            ../supercop-20220213/crypto_sign/ed25519/ref10
)

add_definitions(-D CRYPTO_NAMESPACE\\\(x\\\)=x)
